@@ -1,6 +1,6 @@
 Copyright (C) 2009 ASCII MEDIA WORKS
 Copyright (C) 2010-2017 Takuji TANAKA
-Copyright (C) 2017-2020 Japanese TeX Development Community
+Copyright (C) 2017-2022 Japanese TeX Development Community
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
