@@ -16,8 +16,8 @@ struct ublock {
 /*
  References:
  [1] http://www.unicode.org/Public/UNIDATA/Blocks.txt
-        Blocks-13.0.0.txt
-        Date: 2019-07-10, 19:06:00 GMT [KW]
+        Blocks-14.0.0.txt
+        Date: 2021-01-22, 23:29:00 GMT [KW]
  [2] CMap files
      https://github.com/adobe-type-tools/cmap-resources/
      Adobe-CNS1-7/                  Adobe-CNS1-7 materials
@@ -58,6 +58,7 @@ static struct ublock ublock_data[] = {
   {0x0800, 0x083F, ENTRY_NO  , 0}, /* Samaritan */
   {0x0840, 0x085F, ENTRY_NO  , 0}, /* Mandaic */
   {0x0860, 0x086F, ENTRY_NO  , 0}, /* Syriac Supplement */
+  {0x0870, 0x089F, ENTRY_NO  , 0}, /* Arabic Extended-B */
   {0x08A0, 0x08FF, ENTRY_NO  , 0}, /* Arabic Extended-A */
   {0x0900, 0x097F, ENTRY_NO  , 0}, /* Devanagari */
   {0x0980, 0x09FF, ENTRY_NO  , 0}, /* Bengali */
@@ -221,7 +222,9 @@ static struct ublock ublock_data[] = {
   {0x104B0, 0x104FF, ENTRY_NO  , 0}, /* Osage */
   {0x10500, 0x1052F, ENTRY_NO  , 0}, /* Elbasan */
   {0x10530, 0x1056F, ENTRY_NO  , 0}, /* Caucasian Albanian */
+  {0x10570, 0x105BF, ENTRY_NO  , 0}, /* Vithkuqi */
   {0x10600, 0x1077F, ENTRY_NO  , 0}, /* Linear A */
+  {0x10780, 0x107BF, ENTRY_NO  , 0}, /* Latin Extended-F */
   {0x10800, 0x1083F, ENTRY_NO  , 0}, /* Cypriot Syllabary */
   {0x10840, 0x1085F, ENTRY_NO  , 0}, /* Imperial Aramaic */
   {0x10860, 0x1087F, ENTRY_NO  , 0}, /* Palmyrene */
@@ -246,6 +249,7 @@ static struct ublock ublock_data[] = {
   {0x10E80, 0x10EBF, ENTRY_NO  , 0}, /* Yezidi */
   {0x10F00, 0x10F2F, ENTRY_NO  , 0}, /* Old Sogdian */
   {0x10F30, 0x10F6F, ENTRY_NO  , 0}, /* Sogdian */
+  {0x10F70, 0x10FAF, ENTRY_NO  , 0}, /* Old Uyghur */
   {0x10FB0, 0x10FDF, ENTRY_NO  , 0}, /* Chorasmian */
   {0x10FE0, 0x10FFF, ENTRY_NO  , 0}, /* Elymaic */
   {0x11000, 0x1107F, ENTRY_NO  , 0}, /* Brahmi */
@@ -272,6 +276,7 @@ static struct ublock ublock_data[] = {
   {0x119A0, 0x119FF, ENTRY_NO  , 0}, /* Nandinagari */
   {0x11A00, 0x11A4F, ENTRY_NO  , 0}, /* Zanabazar Square */
   {0x11A50, 0x11AAF, ENTRY_NO  , 0}, /* Soyombo */
+  {0x11AB0, 0x11ABF, ENTRY_NO  , 0}, /* Unified Canadian Aboriginal Syllabics Extended-A */
   {0x11AC0, 0x11AFF, ENTRY_NO  , 0}, /* Pau Cin Hau */
   {0x11C00, 0x11C6F, ENTRY_NO  , 0}, /* Bhaiksuki */
   {0x11C70, 0x11CBF, ENTRY_NO  , 0}, /* Marchen */
@@ -283,11 +288,13 @@ static struct ublock ublock_data[] = {
   {0x12000, 0x123FF, ENTRY_NO  , 0}, /* Cuneiform */
   {0x12400, 0x1247F, ENTRY_NO  , 0}, /* Cuneiform Numbers and Punctuation */
   {0x12480, 0x1254F, ENTRY_NO  , 0}, /* Early Dynastic Cuneiform */
+  {0x12F90, 0x12FFF, ENTRY_NO  , 0}, /* Cypro-Minoan */
   {0x13000, 0x1342F, ENTRY_NO  , 0}, /* Egyptian Hieroglyphs */
   {0x13430, 0x1343F, ENTRY_NO  , 0}, /* Egyptian Hieroglyph Format Controls */
   {0x14400, 0x1467F, ENTRY_NO  , 0}, /* Anatolian Hieroglyphs */
   {0x16800, 0x16A3F, ENTRY_NO  , 0}, /* Bamum Supplement */
   {0x16A40, 0x16A6F, ENTRY_NO  , 0}, /* Mro */
+  {0x16A70, 0x16ACF, ENTRY_NO  , 0}, /* Tangsa */
   {0x16AD0, 0x16AFF, ENTRY_NO  , 0}, /* Bassa Vah */
   {0x16B00, 0x16B8F, ENTRY_NO  , 0}, /* Pahawh Hmong */
   {0x16E40, 0x16E9F, ENTRY_NO  , 0}, /* Medefaidrin */
@@ -297,12 +304,14 @@ static struct ublock ublock_data[] = {
   {0x18800, 0x18AFF, ENTRY_NO  , 0}, /* Tangut Components */
   {0x18B00, 0x18CFF, ENTRY_NO  , 0}, /* Khitan Small Script */
   {0x18D00, 0x18D8F, ENTRY_NO  , 0}, /* Tangut Supplement */
+  {0x1AFF0, 0x1AFFF, ENTRY_NO  , 0}, /* Kana Extended-B */
   {0x1B000, 0x1B0FF, ENTRY_NO  , 0}, /* Kana Supplement */
   {0x1B100, 0x1B12F, ENTRY_NO  , 0}, /* Kana Extended-A */
   {0x1B130, 0x1B16F, ENTRY_NO  , 0}, /* Small Kana Extension */
   {0x1B170, 0x1B2FF, ENTRY_NO  , 0}, /* Nushu */
   {0x1BC00, 0x1BC9F, ENTRY_NO  , 0}, /* Duployan */
   {0x1BCA0, 0x1BCAF, ENTRY_NO  , 0}, /* Shorthand Format Controls */
+  {0x1CF00, 0x1CFCF, ENTRY_NO  , 0}, /* Znamenny Musical Notation */
   {0x1D000, 0x1D0FF, ENTRY_NO  , 0}, /* Byzantine Musical Symbols */
   {0x1D100, 0x1D1FF, ENTRY_NO  , 0}, /* Musical Symbols */
   {0x1D200, 0x1D24F, ENTRY_NO  , 0}, /* Ancient Greek Musical Notation */
@@ -311,9 +320,12 @@ static struct ublock ublock_data[] = {
   {0x1D360, 0x1D37F, ENTRY_NO  , 0}, /* Counting Rod Numerals */
   {0x1D400, 0x1D7FF, ENTRY_NO  , 0}, /* Mathematical Alphanumeric Symbols */
   {0x1D800, 0x1DAAF, ENTRY_NO  , 0}, /* Sutton SignWriting */
+  {0x1DF00, 0x1DFFF, ENTRY_NO  , 0}, /* Latin Extended-G */
   {0x1E000, 0x1E02F, ENTRY_NO  , 0}, /* Glagolitic Supplement */
   {0x1E100, 0x1E14F, ENTRY_NO  , 0}, /* Nyiakeng Puachue Hmong */
+  {0x1E290, 0x1E2BF, ENTRY_NO  , 0}, /* Toto */
   {0x1E2C0, 0x1E2FF, ENTRY_NO  , 0}, /* Wancho */
+  {0x1E7E0, 0x1E7FF, ENTRY_NO  , 0}, /* Ethiopic Extended-B */
   {0x1E800, 0x1E8DF, ENTRY_NO  , 0}, /* Mende Kikakui */
   {0x1E900, 0x1E95F, ENTRY_NO  , 0}, /* Adlam */
   {0x1EC70, 0x1ECBF, ENTRY_NO  , 0}, /* Indic Siyaq Numbers */
