@@ -1,2 +1,2 @@
-#define VERSION "20200412"
+#define VERSION "20220121"
 #define BUG_ADDRESS "issue@texjp.org"
